<resources>
    <string name="app_name">XWriter</string>
    <string name="versionName">1.0</string>
    <string name="input_tooltip">Input the text you want to print</string>
    <string name="print">Next</string>  <!-- Previously Print which is shown in the first main page -->
    <string name="copyButtonToolTip">Press To Copy</string>
    <string name="shareButtonTip">Press To Share</string>

    <string name="shareButtonDescription">Opens the share menu for sharing copied text to different apps</string>
    <string name="copyButtonDescription">Copies the text from this windows to the clipboard</string>

<!--    Advanced Button-->
    <string name="advanceOptionsButtonText">Advanced Options</string>

<!--    Submit Button-->
    <string name="submitButtonText">Print</string>    <!-- Previously Submit,  which is shown in the 2nd page -->

<!--    Radio Button-->
    <string name="incrementalButtonText">Incremental</string>
    <string name="nothingButtonText">Nothing</string>

    <string name="inputPreText">Input your text here</string>
</resources>