<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".Counter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="How many times? "
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/background_light"
        android:textSize="40sp"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:focusable="true"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:letterSpacing="1"
        android:onClick="print2"
        android:text=""
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/advanceOptionsButtonText"
        android:visibility="visible"
        android:onClick="advanceView"

        >

    </Button>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <RadioButton
            android:id="@+id/incremental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incrementalButtonText"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:onClick="incremental"

            />
        <RadioButton
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothingButtonText"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:onClick="incremental"

            />
    </RadioGroup>
</LinearLayout>